--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,7 +13,7 @@
 		.item_causes
 			align-items: flex-start 
 			.text_causes
-				width: 295px;
+				width: 295px
 		.main-title_causes
 			font-size: 37px
 
@@ -43,8 +43,8 @@
 			font-size: 18px
 
 		.call_btn
-			margin-top: 23px;
-			width: 100%;
+			margin-top: 23px
+			width: 100%
 			height: 40px
 		
 
